--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
           BRANCH: ${{ matrix.branch }}
         shell: bash
         run: |
+          ./setup.sh
           echo "src-link nfqws $GITHUB_WORKSPACE" >> feeds.conf
           ./scripts/feeds update nfqws
           ./scripts/feeds install -ap nfqws
