--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           apt update
           apt install -y jq
           TAG=$(wget -qO- 'https://api.github.com/repos/bol-van/zapret/releases/latest' | jq -r '.tag_name')
-          sed -i "s|_VERSION_|${TAG/v}|" Makefile
+          sed -i "s|_VERSION_|${TAG/v}|" "$GITHUB_WORKSPACE/nfqws/Makefile"
           echo "tag=${TAG}" >> $GITHUB_OUTPUT
 
       - name: Build package
@@ -51,11 +51,11 @@ jobs:
         run: |
           cp -r .gnupg /github/home
           ./setup.sh
-          echo "src-link nfqws $GITHUB_WORKSPACE/nfqws-openwrt" > feeds.conf
+          echo "src-link nfqws $GITHUB_WORKSPACE" > feeds.conf
           scripts/feeds update nfqws
           scripts/feeds install -ap nfqws
           make defconfig
-          make package/nfqws-openwrt/compile V=s -j$(nproc) BUILD_LOG=1
+          make package/nfqws/compile V=s -j$(nproc) BUILD_LOG=1
           make package/index
           tar cvf "${GITHUB_WORKSPACE}/ipk-${BRANCH}-${ARCH}.tar" -C bin/packages/*/nfqws --transform "s|^\./|${BRANCH/openwrt-}/${ARCH}/|" --show-transformed-names .
 
