--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
           scripts/feeds update -a
           scripts/feeds install -ap nfqws
           make defconfig
-          make package/nfqws/compile V=s -j$(nproc) BUILD_LOG=1
+          make CFLAGS=-static package/nfqws/compile V=s -j$(nproc) BUILD_LOG=1
           tar cvf "${GITHUB_WORKSPACE}/ipk-${BRANCH}-${ARCH}.tar" -C bin/packages/*/nfqws --transform "s|^\./|${BRANCH/openwrt-}/${ARCH}/|" --show-transformed-names .
 
       - name: Compress build logs
