--- a/nfqws/Makefile
+++ b/nfqws/Makefile
@@ -24,9 +24,7 @@ define Package/$(PKG_NAME)
 	TITLE:=$(PKG_NAME)
 	SUBMENU:=Zapret
 	URL:=https://github.com/bol-van/zapret
-	DEPENDS:=+kmod-nft-queue
-#	DEPENDS:=+libcap +libnetfilter-queue +zlib
-	PKG_BUILD_DEPENDS:=libcap libnetfilter-queue zlib
+	DEPENDS:=+libcap +libnetfilter-queue +zlib
 endef
 
 define Package/$(PKG_NAME)/description
